name:                js-jit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/js-jit#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Burge
maintainer:          michaelburge@pobox.com
copyright:           2017 Michael Burge
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JS.Ast
                       JS.Special
                       JS.Jit
                       JS.Assembler
  build-depends:       base >= 4.7 && < 5
                     , free
                     , protolude
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveTraversable
                     , DeriveFoldable
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , LambdaCase
                     , NoImplicitPrelude
  c-sources:           c/special.c
executable js
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , js-jit
  default-language:    Haskell2010


test-suite js-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , js-jit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/js-jit
